--- a/_posts/2017-02-16-box_plan.md
+++ b/_posts/2017-02-16-box_plan.md
@@ -8,10 +8,10 @@ title: HW3 - Design Box for Arduino
  <h2>Design Decisions </h2>
  1) For supporting adding of sensors / Leds the top panel has holes made into it. These holes exposes all the GPIO pins present on Arduino.
 
- 2) Also the front panel has holes to allow inserting USB and power cables.
+ 2) Also the left panel has holes to allow inserting USB and power cables.
 
  3) The dimention of the box have been kept 1 cm bigger on all sides to keep the design of finger tabs simple. ie 
-Due to this padding the box doesnt have any week points from where it can break easily. In absense of this padding the material would have become too thin at certain places after we cut the holes explained in above two points.
+Due to this padding the box doesnt have any weak points from where it can break easily. In absense of this padding the material would have become too thin at certain places after we cut the holes explained in above two points. This also means that the arduino will be slighly elavated from the bottom panel. 
 
  4) The arduino will have to be screwed on the bottom panel to keep it fixed in a place. The bottom panel has slots for these screws.
 
@@ -37,5 +37,4 @@ Due to this padding the box doesnt have any week points from where it can break 
 </figure>
 
 <h2> Source file </h2> 
-Source file can be found at 
-https://github.com/gbangera/CSE-592/tree/master/Assignment%203%20-%20Part%201:%202D%20Design
+Source file can be found <a href="https://github.com/gbangera/CSE-592/tree/master/Assignment%203%20-%20Part%201:%202D%20Design">here </a>
