--- a/_posts/2017-02-16-box_plan.md
+++ b/_posts/2017-02-16-box_plan.md
@@ -15,6 +15,7 @@ Due to this padding the box doesnt have any weak points from where it can break 
 
  4) The arduino will have to be screwed on the bottom panel to keep it fixed in a place. The bottom panel has slots for these screws.
 
+5) Kerfs have been taken care while designing the finger tabs. While at other places the 1 cm padding takes care of the kerfs. so even if some holes are cut extra by say 0.2 mm it wont hurt our box since all these holes are meant to allow items/cables of lesser dimentions.
 
  <h2> Sketches </h2>
 
