--- a/_posts/2017-02-21-final-box.md
+++ b/_posts/2017-02-21-final-box.md
@@ -8,10 +8,7 @@ Continuing on the previous assingment where we desingned our box for aurduino th
 
  <h2> The Cutting Plan </h2>
 
-<figure>
-	<img src="/public/images/final_plan.svg">
-	<figcaption>Fig.1 - The cutting plan which was fed into laser cutter</figcaption>
-</figure> 
+The final cutting plan that we used can be found <a href="https://github.com/gbangera/CSE-592/blob/master/Assignment%203%20-%20Part%202:%202D%20fabrication/box_design.svg">here</a>
 
  <h2>  cardboard post Laser cutting </h2>
 <figure>
