--- a/_posts/2017-02-22-mouse3d.md
+++ b/_posts/2017-02-22-mouse3d.md
@@ -35,4 +35,4 @@ Following are couple of renderings done for the above model in Blender.
 
 
 <h2> Source file </h2> 
-Source file can be found <a href="https://github.com/gbangera/CSE-592/tree/master/Assignment%203%20-%20Part%201:%202D%20Design">here </a>
+Source file can be found <a href="https://github.com/gbangera/CSE-592/tree/master/Assignment%204%20-%20Part%201:%203D%20Design%20and%20Render%20a%20Mouse">here </a>
