--- a/_posts/2017-02-22-mouse3d.md
+++ b/_posts/2017-02-22-mouse3d.md
@@ -10,7 +10,7 @@ The task at hand was to use FreeCAD to desing 3d model of a mouse and render a p
 
 <figure>
 	<img src="/public/images/mouse_sketch.jpg">
-	<figcaption>Fig.1 - Rought sketch of top view of mouse</figcaption>
+	<figcaption>Fig.1 - Rough sketch of top view of mouse</figcaption>
 </figure> 
 
 
@@ -20,7 +20,7 @@ Following is how the 3d Model looked in FreeCAD.
 	<img src="/public/images/mouse_model.png">
 </figure> 
 
-The source file for the above model can be found <a>here</a>
+The source file for the above model can be found <a href="https://github.com/gbangera/CSE-592/tree/master/Assignment%204%20-%20Part%201:%203D%20Design%20and%20Render%20a%20Mouse">here </a>
 
 <h2>Photorealistic Renderings</h2>
 Following are couple of renderings done for the above model in Blender.
@@ -34,5 +34,4 @@ Following are couple of renderings done for the above model in Blender.
 </figure>
 
 
-<h2> Source file </h2> 
-Source file can be found <a href="https://github.com/gbangera/CSE-592/tree/master/Assignment%204%20-%20Part%201:%203D%20Design%20and%20Render%20a%20Mouse">here </a>
+
