--- a/_posts/2017-03-06-project1.md
+++ b/_posts/2017-03-06-project1.md
@@ -7,7 +7,7 @@ title: HW5 - Sketching Problems and Solutions
 Ergonomics Monitor
 </h1>
 
-In todays world as we are becoming more and more dependdant on computer , we are spending increasing amounts of time sitting in front of computer. This prolonged sitting espcially in a bad posture can have some serious impacts on a person's health. A quick google search will reveal that a big percentage of software engineers today suffer from some kind of body pain. 
+In todays world as we are becoming more and more dependent on computer , we are spending increasing amounts of time sitting in front of computer. This prolonged sitting espcially in a bad posture can have some serious impacts on a person's health. A quick google search will reveal that a big percentage of software engineers today suffer from some kind of body pain. 
 Ergonomics hold the solution to above problems but issue here is a person while working has to be constantly vigilant about his/her posture , which can be difficult sometimes because person has to focus on multiple things at same time. So what we propose is a wearable device which can do the monitoring on behalf of the person and provide him proper feedbacks when need arises. 
 
 <h2> Problem Statement </h2>
@@ -42,9 +42,31 @@ Our proposed device has mainly three components -
 </ul>
 
 <p>
-According to principles of Ergonomics every joint in the body has a neutral posture, and that is the posture everyone should maintain while working. Any serious deviation from this neutral posture for long duration can lead to problems. Our wearable sensors will be attached at some specific locations in the body , 3 sensors for every joing which we want to monitor. These sensors will be capable of sending their spacial 3d position to a central processing unit. This this spatial information we can easiliy figure out what is the angle at that partcular joint. 
+According to principles of Ergonomics every joint in the body has a neutral posture, and that is the posture everyone should maintain while working. Any serious deviation from this neutral posture for long duration can lead to problems. Our wearable sensors will be attached at some specific locations in the body , 3 sensors for every joint which we want to monitor. These sensors will be capable of sending their spacial 3d position to a central processing unit. This spatial information we can easily figure out what is the angle at that particular joint. 
 </p>
 <p>
 If the calculated angle is deviating more than a threshold then we can start recording the time. Once some x amout of time has passed in a bad posture we can send soft warnings in form of led color change in the wrist band. If user still missed the signal and continues their work then we can send stronger signals in form of vibrations in the wrist band.
 Using the mobile app user can view the stats and figure out which part of the body was in bad posture and fix that accordingly. 
 </p>
+
+<h2>Concept Video</h2>
+A small video explaining the concept. <br/> Source video can he found <a href="https://github.com/gbangera/CSE-592/tree/master/Assignment%205:%20Sketching%2C%20problems%20and%20solutions">here</a>
+
+<div style="background-color: black; width: 100%; text-align: center" >
+<video src = "/public/videos/project.mp4" width="580" height="480" style="margin: 0 auto;" controls background-color="#000000">
+</video>
+</div>
+
+Following images show how the sensors will be setup on some of our joints - 
+<figure>
+	<img src="/public/images/proj1.jpg">
+</figure>
+<figure>
+	<img src="/public/images/proj2.jpg">
+</figure>
+<figure>
+	<img src="/public/images/proj3.jpg">
+</figure>
+<figure>
+	<img src="/public/images/proj4.jpg">
+</figure>
